--- a/html/realisations.html
+++ b/html/realisations.html
@@ -20,7 +20,7 @@
 	<body>
 		<header>
 			<div class="menuzone">
-				<a class="navbar-brand" href="../index.html"><img src="../img/la-chouette-agence.png" alt="logo de La chouette agence avec son texte"/></a>
+				<a class="navbar-brand" href="../index.html"><img src="../img/la-chouette-agence.webp" alt="logo de La chouette agence avec son texte"/></a>
 				<nav class="menubar">
 					<a class="menu" href="../index.html">Accueil</a>
 					<a class="menu" href="realisations.html">Réalisations</a>
@@ -31,7 +31,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<img src="../img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
+							<img src="../img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
 							<h1 class="text-center hero-bloc-text tc-white ">Toutes nos réalisations </h1>
 							<div class="text-center">
 								<a href="../html/contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -50,22 +50,22 @@
                 </div>
                 <div class="flex grid">
                     <article class="flex-center">
-                        <a href="realisations.html"><img src="../img/livres.jpeg" class="img-top" alt="Image de plusieurs livres ouverts les uns sur les autres illustrants la refonte d'un site web"/></a>
+                        <a href="realisations.html"><img src="../img/livres.webp" class="img-top" alt="Image de plusieurs livres ouverts les uns sur les autres illustrants la refonte d'un site web"/></a>
                         <h3>Refonte d'un site web pour un journal local</h3>
                         <p>Nous avons créé une nouvelle identité visuelle <br>pour un journal lyonnais.</p>
                     </article>
                     <article class="flex-center">
-                        <a href="realisations.html"><img src="../img/photographe.jpeg" class="img-top" alt="Image d'une photographe prenant une photo illustrant la création d'un site web"/></a>
+                        <a href="realisations.html"><img src="../img/photographe.webp" class="img-top" alt="Image d'une photographe prenant une photo illustrant la création d'un site web"/></a>
                         <h3>Création d'un site web pour photographes</h3>
                         <p>Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
                     </article>
                     <article class="flex-center">
-                        <a href="realisations.html"><img src="../img/materiel-photo.jpeg" class="img-top" alt="Image de plusieurs accesoires pour la photographie disposer sur une table illustrant la création d'un site internet"/></a>
+                        <a href="realisations.html"><img src="../img/materiel-photo.webp" class="img-top" alt="Image de plusieurs accesoires pour la photographie disposer sur une table illustrant la création d'un site internet"/></a>
                         <h3>Réalisation d'un site internet pour un voyageur</h3>
                         <p>Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
                     </article>
                     <article class="flex-center">
-                        <a href="realisations.html"><img src="../img/zone-travail.jpeg" class="img-top" alt="Image d'un ordinateur en utilisation entourer de matériel de bureau illustrant la conception d'un site web"/></a>
+                        <a href="realisations.html"><img src="../img/zone-travail.webp" class="img-top" alt="Image d'un ordinateur en utilisation entourer de matériel de bureau illustrant la conception d'un site web"/></a>
                         <h3>Conception d'un site pour une agence de mariage</h3>
                         <p>Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
                     </article>
