--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<header>
 			<div class="menuzone">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="logo de La chouette agence avec son texte"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="logo de La chouette agence avec son texte"/></a>
 				<nav class="menubar">
 					<a class="menu" href="index.html">Accueil</a>
 					<a class="menu" href="./html/realisations.html">Réalisations</a>
@@ -31,7 +31,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
+							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
 							<h1 class="text-center hero-bloc-text tc-white ">La chouette agence</h1>
 							<div class="text-center">
 								<a href="./html/contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
